--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -18,25 +18,26 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.1+2
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.17.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  shared_preferences: ^0.5.12+4
-  flag: ^3.1.0
-  bloc: ^6.1.1
-  flutter_bloc: ^6.1.1
-  path_provider: ^1.6.27
-  dynamic_theme: ^1.0.1
-  flutter_tts: ^2.1.0
-  flutter_launcher_icons: ^0.8.1
+  cupertino_icons: ^1.0.8
+  shared_preferences: ^2.2.3
+  flag: ^7.0.0
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
+  path_provider: ^2.1.5
+  #dynamic_theme: ^1.0.1
+  provider: ^6.1.2
+  flutter_tts: ^4.0.2
 
 flutter_icons:
   android: "launcher_icon"
@@ -53,7 +54,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -61,14 +61,14 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/menu/
-   - assets/alphabet/
-   - assets/signLanguage/
-   - assets/animals/
-   - assets/professions/
-   - assets/numbers/
-   - assets/food/
-   - assets/icon/
+    - assets/menu/
+    - assets/alphabet/
+    - assets/signLanguage/
+    - assets/animals/
+    - assets/professions/
+    - assets/numbers/
+    - assets/food/
+    - assets/icon/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
